Use rails:onbuild docker base image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,14 @@ db:
 web:
   build: .
   command: bundle exec rails s -p 3000 -b '0.0.0.0'
-  volumes:
-    - .:/myapp
+  volumes_from:
+    - bundler-cache
   ports:
     - "3000:3000"
   links:
     - db
+bundler-cache:
+  image: ruby:2.2
+  command: /bin/true
+  volumes:
+    - /usr/local/bundle
