--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ db:
   image: postgres
   ports:
     - "5432:5432"
+  env_file:
+    - .env
 web:
   build: .
   command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -9,4 +11,6 @@ web:
     - "3000:3000"
   links:
     - db
+  env_file:
+    - .env
 
